<resources>
    <string name="app_name">1 2 3 4</string>
    <string name="image_speech">Speech</string>
    <string name="logo">Logo</string>
    <string name="img_topic">Image Topic</string>
    <string name="img_thing">Image Thing</string>
    <string name="game_over">Trò chơi kết thúc</string>
    <string name="information">Thông tin</string>
    <string name="app_full_name">1 2 3 4 - English Vocabulary</string>
    <string name="email">Email: l8hailt@gmail.com</string>
    <string name="close">Đóng</string>
    <string name="version">Phiên bản:\u0020</string>
    <string name="img_back">Image Back</string>
    <string name="your_score">Điểm của bạn: %1$d</string>
    <string name="high_score_title">Điểm cao</string>
    <string name="high_score">Điểm cao: %1$d</string>
    <string name="default_score">0</string>
    <string name="default_heart">4</string>

    <string name="facebook_app_id">1805614062898528</string>
    <string name="fb_login_protocol_scheme">fb1805614062898528</string>
    <string name="victory">Chiến thắng</string>
    <string name="topic">Chủ đề</string>
    <string name="double_back_to_exit">Ấn \"Quay lại\" một lần nữa để thoát</string>
    <string name="choose_mode">Chọn chế độ</string>
    <string name="selection_mode">Lựa chọn</string>
    <string name="word_guess_mode">Ghép chữ</string>
    <string name="question_number">Câu số %1$d</string>
    <string name="intro_of_answer">Đáp án của câu hỏi này là</string>
    <string name="noti_wrong_answer">Câu trả lời của bạn chưa đúng</string>

    <string-array name="congratulation_array">
        <item>Chúc mừng</item>
        <item>Chính xác</item>
        <item>Tuyệt vời</item>
        <item>Xuất sắc</item>
    </string-array>

    <string-array name="game_over_title_array">
        <item>Tiếc quá</item>
        <item>Chơi lại nào</item>
        <item>Thua rồi</item>
        <item>Game over</item>
    </string-array>

</resources>
