<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_game_over">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/choose_mode"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSelectionMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/dlg_btn_close_selector"
        android:text="@string/selection_mode"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnWordGuessMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSelectionMode"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/dlg_btn_close_selector"
        android:text="@string/word_guess_mode"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp" />

</RelativeLayout>