<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dlg_show_answer"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCongratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_tv_congratulation"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="4dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="48sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_speech_bg"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/intro_of_answer"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/img_logo" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_next_selector"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvYourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/your_score"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/high_score"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:visibility="gone" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dlg_btn_replay_selector"
            android:minWidth="42dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/dlg_btn_share_selector"
            android:minWidth="42dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnChooseTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dlg_btn_choose_topic_selector"
            android:minWidth="42dp"
            android:visibility="gone" />

    </GridLayout>

</LinearLayout>