<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ui.SelectionModeActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/iclHeader"
            layout="@layout/header" />

        <TextView
            android:id="@+id/tvHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawableEnd="@drawable/ic_heart"
            android:drawablePadding="4dp"
            android:drawableRight="@drawable/ic_heart"
            android:text="@string/default_heart"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/default_score"
        android:textColor="@color/colorTextPrimary"
        android:textSize="32sp" />

    <FrameLayout
        android:id="@+id/containerMainImage"
        android:layout_width="256dp"
        android:layout_height="170dp"
        android:layout_below="@id/tvScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_main_image">

        <ImageView
            android:id="@+id/imgThing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_thing"
            android:padding="16dp" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvVietnamese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerMainImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp" />

    <GridLayout
        android:id="@+id/grlCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:columnCount="2">

        <Button
            android:id="@+id/btnCaseA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_case_selector" />

        <Button
            android:id="@+id/btnCaseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_case_selector" />

        <Button
            android:id="@+id/btnCaseC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_case_selector" />

        <Button
            android:id="@+id/btnCaseD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_btn_case_selector" />

    </GridLayout>

</RelativeLayout>